--- a/sentiment_analysis_svm.ipynb
+++ b/sentiment_analysis_svm.ipynb
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-oiH4q3TaFRo"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "-kyo1AyccEti"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "-d-EAskPcH8N"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "rxXXKadOcKZU"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "15WPcTWocMtm"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "Fzk6lbDccOXQ"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "QXZRuqxjcQcK"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "Yqaqcb5QcR2v"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "i4UbEcyWcUD5"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
       "metadata": {
         "id": "_9yeSHghcYoa"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "09vWM486cahP"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
       "metadata": {
         "id": "HPMUTbUZcc6e"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "pJhjvxRhdBd8"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
       "metadata": {
         "id": "05ELeWwBdCys"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "giDNtqj0dCo1"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -347,7 +347,7 @@
       "metadata": {
         "id": "GswIXYzdd_Lz"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,7 +385,7 @@
       "metadata": {
         "id": "mUS7SwFRasvC"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -404,12 +404,12 @@
       "metadata": {
         "id": "MFSBGskOakDv"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "AHeW64DKZ7Uy"
       },
@@ -423,6 +423,146 @@
         "\n",
         "\treturn bow_corpus, len(dictionary)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hagamos una nube de palabras para cada polaridad de los tweets:"
+      ],
+      "metadata": {
+        "id": "-VCjUnI58v_N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from wordcloud import WordCloud, STOPWORDS\n",
+        "import pickle\n",
+        "import itertools\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import nltk\n",
+        "from PIL import Image"
+      ],
+      "metadata": {
+        "id": "FFyCXYfDWFbt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_word_cloud(tweets):\n",
+        "\n",
+        "\ttweet_words = list(itertools.chain.from_iterable(tweets))\n",
+        "\n",
+        "\tstopwords = set(STOPWORDS)\n",
+        "\n",
+        "\twordcloud = WordCloud(width = 800, height = 800,\n",
+        "                background_color ='white',\n",
+        "                stopwords = stopwords,\n",
+        "                min_font_size = 10)\n",
+        "\n",
+        "\twordcloud.generate(' '.join(tweet_words))\n",
+        " \n",
+        "\t# plot the WordCloud image                      \n",
+        "\tplt.figure(figsize = (8, 8), facecolor = None)\n",
+        "\tplt.imshow(wordcloud)\n",
+        "\tplt.axis(\"off\")\n",
+        "\tplt.tight_layout(pad = 0)\n",
+        " \n",
+        "\tplt.show()"
+      ],
+      "metadata": {
+        "id": "thNIXbk0WJ75"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_mask_cloud(tweets):\n",
+        "\t\n",
+        "\ttweet_words = list(itertools.chain.from_iterable(tweets))\n",
+        "\n",
+        "\tstopwords = set(STOPWORDS)\n",
+        "\n",
+        "\tmask = np.array(Image.open(\"TWITTER2.png\"))\n",
+        "\n",
+        "\twc = WordCloud(background_color=\"white\", max_words=1000, mask=mask,\n",
+        "               stopwords=STOPWORDS.update(['wzy', 'mail', 'url', 'htag', 'covid', 'covid19', 'vacuna', 'si', 'hacer']), contour_width=3, contour_color='steelblue')\n",
+        "\n",
+        "\t# generate word cloud\n",
+        "\twc.generate(' '.join(tweet_words))\n",
+        "\n",
+        "\t# store to file\n",
+        "\twc.to_file(\"file_x.png\")\n",
+        "\n",
+        "\t# show\n",
+        "\tplt.imshow(wc, interpolation='bilinear')\n",
+        "\tplt.axis(\"off\")\n",
+        "\tplt.figure()\n",
+        "\t# plt.imshow(mask, cmap=plt.cm.gray, interpolation='bilinear')\n",
+        "\t# plt.axis(\"off\")\n",
+        "\tplt.show()"
+      ],
+      "metadata": {
+        "id": "djqMBP0xWOQ7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_bigrams(tweets):\n",
+        "\n",
+        "\tbigram_list = []\n",
+        "\n",
+        "\t# para cada lista de tokens en la lista contenedor\n",
+        "\tfor item in tweets:\n",
+        "\t\t# creamos los bigramas, regresa una lista con cada uno\n",
+        "\t\tbigram = list(nltk.bigrams(item))\n",
+        "\n",
+        "\t\t#los unimos mediante '_'\n",
+        "\t\tbigram_list.append(['_'.join(j) for j in bigram])\n",
+        "\n",
+        "\treturn bigram_list"
+      ],
+      "metadata": {
+        "id": "4BonhUcZWSCu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def separate_tweets(tweets, sentiment):\n",
+        "  positive_tweets = []\n",
+        "  negative_tweets = []\n",
+        "  neutral_tweets = []\n",
+        "  spam_tweets = []\n",
+        "\n",
+        "  for x in range(len(tweets)):\n",
+        "    if (sentiment[x]==1):\n",
+        "      positive_tweets.append(tweets[x])\n",
+        "    elif (sentiment[x]==0):\n",
+        "      neutral_tweets.append(tweets[x])\n",
+        "    elif (sentiment[x]==-1):\n",
+        "      negative_tweets.append(tweets[x])\n",
+        "    elif (sentiment[x]==2):\n",
+        "      spam_tweets.append(tweets[x])\n",
+        "  \n",
+        "  return positive_tweets, negative_tweets, neutral_tweets, spam_tweets"
+      ],
+      "metadata": {
+        "id": "PwoeqTP_Wd2Q"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
